# titanic-survival-rate-232

./: .gitignore  CMakeLists.txt  README.md
data/: obesity.csv  titanic.csv
src/: main.cpp  ortools.h  ortools.hpp  titanic.cpp  titanic.h
